--- a/package.json
+++ b/package.json
@@ -9,13 +9,32 @@
 		"react-dom": "^19.2.0"
 	},
 	"devDependencies": {
-		"@nx/js": "21.6.4",
+		"@nx/js": "21.6.5",
+		"@nx/react": "^21.6.5",
+		"@nx/vite": "21.6.5",
+		"@nx/web": "21.6.5",
+		"@swc-node/register": "~1.9.1",
+		"@swc/cli": "~0.6.0",
+		"@swc/core": "~1.5.7",
+		"@swc/helpers": "~0.5.11",
 		"@tailwindcss/vite": "^4.1.14",
+		"@types/node": "^20.0.0",
+		"@types/react": "19.0.0",
+		"@types/react-dom": "19.0.0",
+		"@vitejs/plugin-react-swc": "^3.5.0",
+		"@vitest/ui": "^3.0.0",
+		"eslint": "^9.37.0",
+		"eslint-plugin-perfectionist": "^4.15.1",
+		"jiti": "2.4.2",
+		"jsdom": "~22.1.0",
 		"nx": "21.6.4",
 		"prettier": "^3.6.2",
 		"prettier-plugin-tailwindcss": "^0.7.0",
 		"tailwindcss": "^4.1.14",
 		"tslib": "^2.8.1",
-		"typescript": "~5.9.3"
+		"typescript": "~5.9.3",
+		"vite": "^7.0.0",
+		"vite-plugin-dts": "~4.5.0",
+		"vitest": "^3.0.0"
 	}
 }
